@@ -3,6 +3,7 @@
 
 Added generation of array creation and add of array elements for Literal arrays.
 + tests around this.
+Added grammar for numbers.
 
 
 10/01/2011 Changes
